# fastapi_course

./: .env.example  main.py  models.py  pyproject.toml  utils.py
app/: config.py  database.py  main.py  models.py  oauth2.py  query.pgsql  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
