[tool.poetry]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_course"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
